[package]
name = "twilight-sparkle"
version = "0.1.0"
authors = ["Christopher König <me@kurabloodlust.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
once_cell = "1"
#reqwest            = { default-features = false, features = ["native-tls"], version = "0.11" }
reqwest = { default-features = false, features = ["rustls-tls"], version = "0.11" }
regex = "1"
rand = "0.7"
time = "0.2"
futures-util = "0.3"
serde_json = "1"

twilight-gateway = { version = "0.6", default-features = false, features = ["rustls"] }
twilight-http = { version = "0.6", default-features = false, features = ["rustls"] }
twilight-model = { version = "0.6" }